objects/HS_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Good_at_getting_on_with_people__c</fullName>
        <inlineHelpText>13.	How strongly do you agree with these statements? Please rate from 1 to 10 where 10: highest and 1: Lowest</inlineHelpText>
        <label>Good at getting on with people</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Activity__c</fullName>
        <label>HS Activity</label>
        <referenceTo>HS_Activity__c</referenceTo>
        <relationshipName>HS_Baseline_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HS_Main_reason__c</fullName>
        <description>1.	What are you main reasons for wanting to join Headstart London?</description>
        <label>HS Main reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>My friends signed up</fullName>
                </value>
                <value>
                    <fullName>To volunteer</fullName>
                </value>
                <value>
                    <fullName>To have something to put on my CV</fullName>
                </value>
                <value>
                    <fullName>To help me get a job</fullName>
                </value>
                <value>
                    <fullName>To develop my skills</fullName>
                </value>
                <value>
                    <fullName>To get some interview practice</fullName>
                </value>
                <value>
                    <fullName>To stay involved with The Challenge</fullName>
                </value>
                <value>
                    <fullName>Other (please write in)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_introduce_diff_backgrounds_feedback__c</fullName>
        <inlineHelpText>If HeadStart introduced you to people from a different background to you (e.g. from people a different age, support need, religion or ethnicity) we would love to hear about it.</inlineHelpText>
        <label>HS introduce diff backgrounds feedback</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_HeadStart_helped_you_volunteer__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with HeadStart helped you to volunteer?</inlineHelpText>
        <label>Has HeadStart helped you volunteer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Helped_you_get_a_job__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with HeadStart helped you to get a job?</inlineHelpText>
        <label>Helped you get a job</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hope_to_do_when_finish_school__c</fullName>
        <inlineHelpText>11.	What do you hope to do when you finish school?</inlineHelpText>
        <label>Hope to do when finish school</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do on the job training such as an apprenticeship</fullName>
                </value>
                <value>
                    <fullName>Do some work experience or an internship to find out what job you may like</fullName>
                </value>
                <value>
                    <fullName>Volunteer to find out more about what you may like</fullName>
                </value>
                <value>
                    <fullName>I am not sure</fullName>
                </value>
                <value>
                    <fullName>Continue education or training at college/university</fullName>
                </value>
                <value>
                    <fullName>Go straight into a job I want and start my career</fullName>
                </value>
                <value>
                    <fullName>Go straight into any job that will keep me going until I find the job I want</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_confident_do_you_feel_about_using__c</fullName>
        <inlineHelpText>How confident do you feel about using what you have learnt in today&apos;s workshop when you are applying for jobs/further education or having interviews for jobs, in the future?</inlineHelpText>
        <label>Confident using what i learnt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very confident</fullName>
                </value>
                <value>
                    <fullName>Quite confident</fullName>
                </value>
                <value>
                    <fullName>Not very confident</fullName>
                </value>
                <value>
                    <fullName>Not at all confident</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_find_the_event_timing__c</fullName>
        <inlineHelpText>How did you find the event timing?</inlineHelpText>
        <label>How did you find the event timing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs improvement</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_do_you_rate_the_workshop_overall__c</fullName>
        <inlineHelpText>On a scale of 1 to 10 where 10: excellent and 1:very poor how would you rate the workshop overall?</inlineHelpText>
        <label>How do you rate the workshop overall?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_engaging_was_the_facilitator_s_prese__c</fullName>
        <inlineHelpText>How engaging was the facilitator&apos;s presentation?</inlineHelpText>
        <label>How engaging was the facilitator&apos;s prese</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs improvement</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_likely_are_you_to_attend_another_Blo__c</fullName>
        <inlineHelpText>How likely are you to attend another Bloomberg Startup event?</inlineHelpText>
        <label>How likely are you to attend another Blo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not likely</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Extremely likely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_likely_are_you_to_recommend_attendi__c</fullName>
        <inlineHelpText>How likely are you to recommend attending the Kick Off to other young people?</inlineHelpText>
        <label>How likely are you to recommend attendi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Neither likely nor unlikely</fullName>
                </value>
                <value>
                    <fullName>Quite unlikely</fullName>
                </value>
                <value>
                    <fullName>Very unlikely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_likely_are_you_to_recommend_this_ses__c</fullName>
        <inlineHelpText>How likely are you to recommend this session to your friends?</inlineHelpText>
        <label>How likely are you to recommend this ses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not likely</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Extremely Likely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_the_HeadStart_programme_works__c</fullName>
        <inlineHelpText>On a scale of 1 to 10 where 10 = excellent and 1 = very poor how would you rate how well the Kick Off has improved your understanding of:</inlineHelpText>
        <label>How the HeadStart programme works</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_to_find_own_volunteering_opportunity__c</fullName>
        <inlineHelpText>On a scale of 1 to 10 where 10 = excellent and 1 = very poor how would you rate how well the Kick Off has improved your understanding of:</inlineHelpText>
        <label>How to find own volunteering opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_useful_is_volunteering_for_job__c</fullName>
        <inlineHelpText>How useful do you think volunteering is in helping you get the skills you need to get a job?</inlineHelpText>
        <label>How useful is volunteering for job</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very useful</fullName>
                </value>
                <value>
                    <fullName>Quite useful</fullName>
                </value>
                <value>
                    <fullName>Not very useful</fullName>
                </value>
                <value>
                    <fullName>No use at all</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_useful_was_the_information_present__c</fullName>
        <inlineHelpText>How useful was the information presented at the session?</inlineHelpText>
        <label>How useful was the information present</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not useful</fullName>
                </value>
                <value>
                    <fullName>Useful</fullName>
                </value>
                <value>
                    <fullName>Extremely useful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_am_comfortable_mixing_with_people_who__c</fullName>
        <inlineHelpText>I am comfortable mixing with people who are different to me</inlineHelpText>
        <label>I am comfortable mixing with people who</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_am_good_at_accepting_my_share_of_the__c</fullName>
        <inlineHelpText>I am good at accepting my share of the blame when things go wrong</inlineHelpText>
        <label>I am good at accepting my share of the</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_am_good_at_getting_on_with_people_I_ha__c</fullName>
        <inlineHelpText>I am good at getting on with people I haven&apos;t met before</inlineHelpText>
        <label>I am good at getting on with people I ha</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_can_persevere_in_things_that_are_worth__c</fullName>
        <inlineHelpText>How strongly do you agree with these statements? I can persevere in things that are worthwhile, even when they get difficult</inlineHelpText>
        <label>I can persevere in things that are worth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_feel_confident_taking_on_new_challenge__c</fullName>
        <inlineHelpText>I feel confident taking on new challenges</inlineHelpText>
        <label>I feel confident taking on new challenge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_feel_connected_to_my_local_community__c</fullName>
        <inlineHelpText>How strongly do you agree with these statements? I feel connected to my local community</inlineHelpText>
        <label>I feel connected to my local community</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_feel_motivate_to_achieve_my_goals__c</fullName>
        <inlineHelpText>I feel motivate to achieve my goals</inlineHelpText>
        <label>I feel motivate to achieve my goals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_feel_responsible_for_making_a_differe__c</fullName>
        <inlineHelpText>I feel responsible for making a difference in my local community</inlineHelpText>
        <label>I feel responsible for making a differe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_felt_supported_and_encouraged_to_inter__c</fullName>
        <inlineHelpText>During the workshop I felt supported and encouraged to interact with other participants who I didn&apos;t know</inlineHelpText>
        <label>Felt supported and encouraged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neither agree nor disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_generally_trust_myself_to_do_what_I_ne__c</fullName>
        <inlineHelpText>How strongly do you agree with these statements? I generally trust myself to do what</inlineHelpText>
        <label>I generally trust myself to do what I ne</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_have_a_good_understanding_of_what_life__c</fullName>
        <inlineHelpText>I have a good understanding of what life is like for people who are different from me</inlineHelpText>
        <label>I have a good understanding of what life</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_have_been_inspired_by_a_Bloomberg_empl__c</fullName>
        <inlineHelpText>I have been inspired by a Bloomberg employee today?</inlineHelpText>
        <label>I have been inspired by a Bloomberg empl</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_interacted_with_people__c</fullName>
        <inlineHelpText>How much do you agree with the following statements during the workshop I interacted with people who are different than me</inlineHelpText>
        <label>Interacted with people who are diff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neither agree nor disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_sometimes_try_to_understand_my_friends__c</fullName>
        <inlineHelpText>I sometimes try to understand my friends better by imagining how things look from their perspective</inlineHelpText>
        <label>I sometimes try to understand my friends</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_will_use_what_I_learnt_today_at_work__c</fullName>
        <inlineHelpText>How much do you agree or disagree with the following statements?</inlineHelpText>
        <label>I will use what I learnt today at work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_will_use_what_learnt_for_volunteering__c</fullName>
        <inlineHelpText>I will use what I have learned today when volunteering</inlineHelpText>
        <label>I will use what learnt for volunteering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neither agree nor disagree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_someone_is_different_to_me_it_does_no__c</fullName>
        <inlineHelpText>If someone is different to me it does not change how much I trust them</inlineHelpText>
        <label>If someone is different to me it does no</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Important_thing_you_have_learnt_from_Hea__c</fullName>
        <description>Important thing you have learnt from HeadStart</description>
        <inlineHelpText>What would you say is the most important thing you have learnt from taking part in the HeadStart programme?</inlineHelpText>
        <label>Important thing you have learnt from Hea</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interview_Experience__c</fullName>
        <inlineHelpText>Have you ever interviewed before for a job of any kind?</inlineHelpText>
        <label>Interview Experience?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Volunteering_useful__c</fullName>
        <inlineHelpText>How useful do you think volunteering is in helping you get the skills you need to get a job?</inlineHelpText>
        <label>Is Volunteering useful?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very useful</fullName>
                </value>
                <value>
                    <fullName>Quite Useful</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not very useful</fullName>
                </value>
                <value>
                    <fullName>No use at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_what_you_have_learnt_useful_for_futur__c</fullName>
        <inlineHelpText>Thinking about the HeadStart programme overall and the activities you have done, how useful do you think what you have learnt will be when you are applying for jobs or having interviews in the future?</inlineHelpText>
        <label>Is what you have learnt useful for futur</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Better than I expected</fullName>
                </value>
                <value>
                    <fullName>Same as I expected</fullName>
                </value>
                <value>
                    <fullName>Not as good as I expected</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>